src/app/styles/home.module.css
.mainContainer {
  background: linear-gradient(to bottom, #0636de, #021b6d, #031142);
  height: 100%;
  position: relative;
  overflow: hidden;
}

.link {
  text-decoration: none;
  color: #fff;
  margin: 0 16px;
}

.navbar {
  position: absolute;
  display: flex;
  justify-content: space-between;
  margin: 0 100px;
  width: calc(100% - 130px);
  align-items: center;
}

.leftSection1 {
  position: absolute;
  top: 120px;
  margin: 0 100px;
  width: 500px;
}

.p {
  font-weight: 200;
  line-height: 1.5;
  font-size: 37px;
}

.title {
  font-weight: 900;
  font-size: 42px;
}

.buttonContainer {
  display: flex;
  justify-content: flex-end;
}

.button {
  background-color: #221f77;
  color: #fff;
  padding: 18px 24px;
  border-radius: 10px;
  cursor: pointer;
  font-size: 32px;
  margin-right: 20px;
  border: none;
}

.rigthSection1 {
  position: absolute;
  right: 0;
  top: 130px;
}

.containerLinks {
  display: flex;
  text-align: center;
}

.rigthP {
  width: 620px;
  margin: 0;
  margin-left: 50px;
  font-weight: 200;
  font-size: 30px;
}

.containerRigthP {
  background-color: #fff;
  padding: 30px 0px;
  width: 670px;
  margin-top: 30px;
  border-bottom-left-radius: 10px;
  border-top-left-radius: 10px;
  font-size: 24px;
  display: flex;
  justify-content: flex-end;
  padding-right: 35px;
}

.image1 {
  width: 630px;
  height: 360px;
  margin-left: 35px;
  border-radius: 20px;
}

.colorRigthP {
  color: #221f77;
  font-weight: bold;
}

.containerCards {
  display: grid;
  grid-template: repeat(1, 1fr) / repeat(3, 1fr);
  justify-items: center;
  margin-top: 12vh;
}

.card {
  background-color: #fff;
  height: 180px;
  border-radius: 116px;
  display: flex;
  width: 400px;
  justify-content: center;
  align-items: center;
}

.cardCustom {
  background-color: #fff;
  height: 145px;
  border-radius: 116px;
  display: flex;
  width: 400px;
  justify-content: center;
  align-items: center;
  margin-top: 33vh;
  margin-left: 5vh;
}

.cardsP {
  width: 80%;
  font-size: 27px;
  text-align: center;
  margin: 0;
}

.image2 {
  position: absolute;
  top: 770px;
  max-width: 458px;
  max-height: 400px;
}

.colorCardsP {
  color: #221f77;
  font-weight: bold;
}

.cardsP {
  font-weight: 200;
}

.finalFooterContainer {
  background-color: #2c2c2c;
  color: #fff;
  padding: 8px;
  display: flex;
  justify-content: center;
}

.firstFooter {
  display: flex;
  justify-content: space-around;
  color: #fff;
  border-top: #7f617d 1px solid;
  margin-top: 5vh;
  margin-bottom: 2vh;
  padding-top: 5vh;
}

.iconsFooter {
  margin: 0 5px;
}

.footerTitle {
  font-weight: bold;
  text-align: center;
}

.menuMobile {
  display: none;
}

.logo {
  width: 130px;
  height: 91px;
}

.sebasPortfolio {
  text-decoration: none;
  color: inherit;
  font-weight: bold;
}

.showMobileMenu {
  display: flex !important;
  flex-direction: column;
  width: 105vw;
  position: absolute;
  top: 70px;
  background: linear-gradient(to bottom, #0636de, #021b6d, #031142);
  opacity: 0.9;
  gap: 12px;
  z-index: 1;
  padding-bottom: 10px;
  padding-top: 10px;
  align-items: center;
  margin: 0;

  .link {
    border-bottom: 1px solid #c1c1c1;
    padding-bottom: 4px;
    width: max-content;
  }
}

@media screen and (max-width: 1465px) {
  .containerRigthP {
    width: 40vw;
    padding-right: 90px;
  }
  .image1 {
    margin-left: 25px;
  }
}

@media screen and (max-width: 1420px) {
  .containerRigthP {
    width: 34vw;
  }
  .image1 {
    width: 500px;
    height: 280px;
    margin-left: 2vw;
  }
  .rigthP {
    font-size: 28px;
  }
}

@media screen and (max-width: 1315px) {
  .ball {
    height: 700px;
  }
  .title {
    font-size: 36px;
    width: 400px;
  }

  .p {
    width: 400px;
    font-size: 31px;
  }
  .buttonContainer {
    width: 450px;
  }
  .image2 {
    top: 635px;
  }
  .rigthP {
    font-size: 26px;
  }
  .navbar {
    width: 90;
  }
}

@media screen and (max-width: 1230px) {
  .menuMobile {
    display: inherit;
    height: 60px;
    width: 60px;
  }
  .containerLinks {
    display: none;
  }
  .containerCards {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 5vw;
    margin-top: 70vh;
  }
  .image2 {
    position: inherit;
  }
  .imageWithCardContainer {
    display: flex;
    flex-direction: column;
    gap: 5vw;
    margin-top: -50px;
    justify-content: center;
    align-items: center;
  }
  .cardCustom {
    margin-top: 0;
    margin-left: 0;
  }
  .rigthSection1 {
    top: 730px;
    left: 0;
    display: flex;
    flex-direction: column;
  }
  .containerRigthP {
    width: 87vw;
    margin-top: 30px;
    border-radius: 10px;
    border-bottom-left-radius: 0px;
    border-top-left-radius: 0px;
    padding-right: 35px;
  }
  .image1 {
    display: flex;
    width: 100%;
    justify-content: center;
    margin-left: 0;
  }
  .navbar {
    margin: 0 20px;
    width: 90%;
  }
}

@media screen and (max-width: 725px) {
  .ball {
    height: 520px;
    width: 500px;
  }
  .title {
    font-size: 24px;
    width: 250px;
  }

  .p {
    width: 250px;
    font-size: 20px;
  }
  .rigthSection1 {
    margin-top: -23vh;
  }
  .buttonContainer {
    width: 250px;
  }
  .button {
    font-size: 18px;
  }
}

@media screen and (max-width: 600px) {
  .firstFooter {
    flex-direction: column;
    align-items: center;
  }
  .rigthP {
    font-size: 20px;
  }
  .button {
    padding: 8px 14px;
  }
}

@media screen and (max-width: 530px) {
  .ball {
    height: 400px;
    width: 380px;
  }
  .p {
    width: 220px;
    font-size: 18px;
  }
  .leftSection1 {
    margin: 0;
    margin-left: 50px;
    margin-top: -30px;
  }
  .buttonContainer {
    width: 195px;
  }
  .rigthSection1 {
    margin-top: -42vh;
  }
  .containerCards {
    margin-top: 55vh;
  }
  .image1 {
    width: 300px;
    height: 200px;
    align-items: center;
    display: inherit;
    margin-top: 13vh;
  }
  .img1Container {
    width: 100%;
    display: flex;
    justify-content: center;
  }
  .button {
    padding: 8px 14px;
    font-size: 16px;
  }
}

@media screen and (max-width: 463px) {
  .ball {
    height: 387px;
    width: 373px;
  }
  .title {
    font-size: 20px;
    width: 280px;
  }

  .p {
    width: 280px;
    font-size: 20px;
  }
  .buttonContainer {
    width: 150px;
  }
  .button {
    font-size: 11px;
    padding: 6px 12px;
  }
  .rigthSection1 {
    margin-top: -57vh;
  }
  .containerCards {
    margin-top: 450px;
  }
  .imageWithCardContainer {
    margin-top: -3vh;
  }
  .card {
    height: 140px;
    width: 300px;
  }
  .cardsP {
    font-size: 20px;
  }
  .cardCustom {
    height: 140px;
    width: 300px;
    margin-left: 0;
  }
  .imageWithCardContainer {
    justify-content: center;
    align-items: center;
  }
  .image2 {
    width: 300px;
    height: 220px;
  }
  .rigthP {
    margin-left: 20px;
  }
  .finalFooterContainer {
    text-align: center;
  }
  .logo {
    width: 100px;
    height: 75px;
  }
  .menuMobile {
    height: 35px;
    width: 35px;
  }
}

